Switch gobs of checkboxes to select2 multiselects